syntax = "proto3";

package api.v1;
option go_package = "github.com/landlord-bro/api/gen/v1";

import "v1/address.proto";

message PropertyUnit {
  string unit_id = 1;
  string unit_name = 2;
  Address address = 3;
  int32 beds = 4;
  int32 baths = 5;
  int32 totalArea = 6;
}

enum PropertyType {
  // Default value. This value is unused.
  PROPERTY_TYPE_UNSPECIFIED = 0;
  SINGLE_FAMILY_HOME = 1;
  MULTI_UNIT = 2;
}

message RentalProperty {
  string property_id = 1;
  string property_name = 2;
  PropertyType property_type = 3;
  repeated PropertyUnit units = 5;
}